--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ uiTextGoogleFonts = "1.7.6"
 composeNavigation = "2.8.5"
 constraintLayout = "1.1.0"
 gson = "2.10.1"
+glide = "1.0.0-beta01"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,6 +39,8 @@ androidx-room-runtime = {group = "androidx.room", name = "room-runtime", version
 androidx-room-compiler = {group = "androidx.room", name = "room-compiler", version.ref = "room"}
 androidx-room-ktx = {group = "androidx.room", name = "room-ktx", version.ref = "room"}
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+androidx-compose-runtime-livedata = {group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "glide"}
+glide-compose = { group = "com.github.bumptech.glide", name = "compose", version.ref = "glide"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
